crates/aura-macros/tests/boundaries/strong_reference_on_function.rs
#[aura_macros::strong_reference(domain = "channel")]
fn invalid_target() {}

fn main() {}
